[package]
name = "cloudevents-sdk-warp"
version = "0.1.0"
authors = ["Marko Milenković <milenkovicm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-trait = "^0.1.33"
cloudevents-sdk = "0.2.0"
lazy_static = "1.4.0"
bytes = "^0.5"
warp = "0.2"
http = "0.2"
hyper = "0.13"

[dev-dependencies]
#mockito = "0.25.1"
tokio = { version = "^0.2", features = ["full"] }
url = { version = "^2.1" }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
mime = "0.3"